src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Property_Type__c</fullName>
        <label>Current Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Visited__c</fullName>
        <label>Customer Visited</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_informed_about_relevant_Doc_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Informed About Relevant Doc&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Of_Agreement__c</fullName>
        <label>Actual Date Of Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Form_Login_In_system__c</fullName>
        <label>Date Of Form Login In System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Form_Receipt_From_Sales_Team__c</fullName>
        <label>Date Of Form Receipt From Sales Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Visit__c</fullName>
        <label>Date Of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Allotment__c</fullName>
        <label>Date Of Allotment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Assigninng__c</fullName>
        <label>Date Of Assigninng</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Deed_of_Apartment__c</fullName>
        <label>Date of Deed of Apartment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Of Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_for_agrement__c</fullName>
        <formula>Date_Of_Agreement__c -  DATEVALUE( Booking__r.Booking_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days for agrement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descriptive_Remarks_Feedback__c</fullName>
        <label>Descriptive Remarks / Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Designation_Category__c</fullName>
        <label>Designation Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Acountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Proj Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman cum Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chartered Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Investment Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Marketing Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Sub_Source__c</fullName>
        <label>Detailed Sub Source</label>
        <picklist>
            <controllingField>Lead_Sub_Source__c</controllingField>
            <picklistValues>
                <fullName>Non-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Existing Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatch_Mode__c</fullName>
        <label>Dispatch Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Soft Copy via Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft copy via email and hardcopy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documentation_Approved_Date__c</fullName>
        <label>Documentation Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Project_Unit_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Project Unit Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDC__c</fullName>
        <label>EDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Id_O__c</fullName>
        <label>Email Id(O)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Indian Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sindhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Indian Hindu</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Company__c</fullName>
        <formula>Existing_Channel_Partner__r.Company_Name__c</formula>
        <label>Existing Channel Partner Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Contact_Number__c</fullName>
        <formula>Existing_Channel_Partner__r.Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Channel Partner Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Email__c</fullName>
        <formula>Existing_Channel_Partner__r.Email__c</formula>
        <label>Existing Channel Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Phone__c</fullName>
        <formula>Existing_Channel_Partner__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Channel Partner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Opportunities (Existing Channel Partner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Solitaire_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Solitaire Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Agreement__c</fullName>
        <label>Expected Date of Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Loan_Sanction__c</fullName>
        <label>Expected Date of Loan Sanction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Re_Visit_Date__c</fullName>
        <label>Expected Re-Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Letter_Sent_On__c</fullName>
        <label>First Letter Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fitout_Possession_Date__c</fullName>
        <label>Fitout Possession Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flat_number_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Number &amp; Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flatcost_Demanded_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unitcost Demanded Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flatcost_Demanded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unitcost Demanded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flatcost_Paid_Percent_Against_AV__c</fullName>
        <label>Unitcost Paid Percent (Against AV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flatcost_Paid_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unitcost Paid Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flatcost_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unitcost Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flatcost_outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unitcost Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flatcost_outstanding_percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unitcost Outstanding Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <formula>Project_Unit__r.Floor1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Navigator__c</fullName>
        <formula>IMAGE(&apos;/resource/GreenNavImage&apos;, &apos;Green&apos;, 10, ( Total_Page__c * 100 )) &amp;
IMAGE(&apos;/resource/RedNavImage&apos;, &apos;Test IMAGE(image_url, alternate_text [, height, width]) &apos;, 10, (100 - Total_Page__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (round(Total_Page__c * 100,2)) &amp;
&apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form % Navigator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Reject_On_Hold_Date__c</fullName>
        <label>Form Reject/On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula_Project_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Letter_Sent_On__c</fullName>
        <label>Fourth Letter Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Email__c</fullName>
        <label>Future_Correspondence_Contact_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Name__c</fullName>
        <label>Future_Correspondence_Contact_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Phone__c</fullName>
        <label>Future_Correspondence_Contact_Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact__c</fullName>
        <label>Future_Correspondence_Contact</label>
        <picklist>
            <picklistValues>
                <fullName>1st Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Owner__c</fullName>
        <label>Home Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_IA_Status__c</fullName>
        <label>I &amp; IA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_I_A_Comments__c</fullName>
        <label>I &amp; I A Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Income_Level__c</fullName>
        <label>Income Level</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;30 Lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-60 Lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;60 Lacs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Date__c</fullName>
        <label>AM Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interior_Internal_Amenities_of_the_Unt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interior &amp; Internal Amenities of the Unt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstPresalesCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFirstPresalesCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Allotment_Letter_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Allotment Letter Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Final_Intimation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Final Intimation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To assign lead to NRI TL</description>
        <label>Is_NRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reblocked_from_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reblocked From Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_to_be_sent_on__c</fullName>
        <label>First Letter to be sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2_to_be_sent_on__c</fullName>
        <label>Second Letter to be sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L3_to_be_sent_on__c</fullName>
        <label>Third Letter to be sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Call_Attempt_Date__c</fullName>
        <label>Last Call Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Attempt_Status_Details__c</fullName>
        <label>Last Call Attempt Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Rating__c</fullName>
        <label>Last Call Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Interest_Clearation_Date__c</fullName>
        <label>Last Interest Clearation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Presales_Task_Id__c</fullName>
        <label>Latest Presales Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_VDNB_Attempt_Date__c</fullName>
        <label>Last VDNB Call Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_VDNB_Attempted_By__c</fullName>
        <label>Last VDNB Call Attempted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_VDNB_Call_Description__c</fullName>
        <label>Last VDNB Call Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_VDNB_Call_status__c</fullName>
        <label>Last VDNB Call status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_call_attempt_status__c</fullName>
        <label>Last Call Attempt Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_call_attempted_by__c</fullName>
        <label>Last Call Attempted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_call_description__c</fullName>
        <label>Last Call Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Call_Attempted_By__c</fullName>
        <label>Latest Call Attempted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Letter</label>
        <referenceTo>Cancellation_Intimation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_PMT_Comments__c</fullName>
        <label>Latest PMT Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_SM_Comments__c</fullName>
        <label>Latest SM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Task_Comments__c</fullName>
        <label>Latest Task Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Task_Due_Date__c</fullName>
        <label>Latest Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Task_Id__c</fullName>
        <externalId>true</externalId>
        <label>Latest Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestnTask_Id__c</fullName>
        <externalId>true</externalId>
        <label>LatestnTask Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead source</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corprate Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>